--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   table_calendar: ^3.2.0
-
+  firebase_core: ^3.10.1
+  firebase_auth: 
+  cloud_firestore: 
 
 dev_dependencies:
   flutter_test:
