changed tghe ui of the app

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,8 +39,13 @@ dependencies:
   cupertino_icons: ^1.0.8
   table_calendar: ^3.2.0
   firebase_core: ^3.10.1
-  firebase_auth: 
+  firebase_auth: ^5.4.1 
   cloud_firestore: 
+  image_picker: ^1.1.2
+  geolocator: ^13.0.3
+  flutter_typeahead: ^4.3.7
+  http: ^1.2.2
+   
 
 dev_dependencies:
   flutter_test:
