--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,8 +42,8 @@ dependencies:
   flutter_typeahead:
   http: 
   provider:
-  lottie: ^3.3.1
-  geolocator: 
+  lottie: ^3.2.0
+  geolocator: ^8.2.0
 
 dev_dependencies:
   flutter_test:
