--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,8 +42,8 @@ dependencies:
   flutter_typeahead:
   http: 
   provider:
-  lottie: ^3.3.1
-  geolocator: 
+  lottie: ^3.1.3
+  geolocator: ^13.0.2
   google_fonts: ^6.2.1
 
 dev_dependencies:
