--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,8 +72,9 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/
     - assets/animation/
+    - assets/images/
+    - assets/images/female/
 
   #   - images/a_dot_ham.jpeg
 
